--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  color: white;
+  height: 100vh;
+  overflow: auto;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
